echo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
      - name: echo-api
        image: ealen/echo-server
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api-svc
spec:
  ports:
  - port: 9000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: echo-api
