echo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.org/rewrites: "serviceName=echo-api-svc rewrite=/"
spec:
  ingressClassName: nginx
  rules:
  - host: echo.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: echo-api-svc
            port: 
              number: 9000
